--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <iframe width="420" height="315"
+src="/videos/Taichi_S1_C0.mp4">
+</iframe>
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
