--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <iframe width="420" height="315"
-src="/videos/Taichi_S1_C0.mp4">
+src="./videos/Taichi_S1_C0.mp4">
 </iframe>
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
