--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <iframe width="420" height="315" src="./videos/Taichi_S1_C0.mp4"></iframe>
+  <iframe width="420" height="315" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
