--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-  <!--<script src="./fbf.js"></script>-->
+  <script src="./fbf.js"></script>
   
 </head>
 
@@ -15,7 +15,7 @@
 
 
   <p1 id="log">log</p1>
-  <!--<button onclick="run()">go crazy</button>-->
+  <button onclick="run()">go crazy</button>
   <iframe width="420" height="315" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
