--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <p1 id="log">log</p1>
   <button onclick="run()">go crazy</button>
   <iframe width="420" height="315" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
-  <h1>PoseNet example using p5.js</h1>
+  <!--<h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
-  <script src="sketch.js"></script>
+  <script src="sketch.js"></script>-->
   
 </body>
 
