--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 
 
-  <p1 id="log">log</p1>
-  <button onclick="run()">v2.2</button>
+  <p1 id="log">log_newest</p1>
+  <button onclick="run()">go crazy</button>
   <iframe width="420" height="315" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
   <!--<h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
