--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
   <meta charset="UTF-8">
@@ -21,6 +21,28 @@
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
   
+</body>
+
+</html>
+ -->
+
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>PoseNet example using p5.js</title>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
+  
+</head>
+
+<body>
+  <iframe width="512" height="384" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
+  <h1>PoseNet example using p5.js</h1>
+  <p id='status'>Loading model...</p>
+  <script src="sketch.js"></script>
 </body>
 
 </html>
