--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 </head>
 
 <body>
-  <p>helo @11:10pm</p>
-  <iframe width="512" height="384" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>
+  <p id="log">helo @10:04pm</p>
+  <!--<iframe width="512" height="384" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>-->
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
-  <script src="sketch.js"></script>
+  <script src="fbf.js"></script>
 </body>
 
 </html>
