--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <!--<iframe width="512" height="384" src="./videos/Taichi_S1_C0.mp4" id="iframeid"></iframe>-->
   <h1>PoseNet example using p5.js</h1>
   <p id='status'>Loading model...</p>
-  <script src="fbf.js"></script>
+  <script src="trial.js"></script>
+<!--   <script src="fbf.js"></script> -->
 </body>
 
 </html>
